v0.0.2 Closed-Beta:

1)  Added NET_SDK to be built into MelonLoader.ModHandler as the designated IL2CPP Wrapper.
2)  Fixed issue with Mods and Logs folders not being in the correct place next to the game's exe.
3)  Fixed issue with the ModPrefs not calling the OnModSettingsApplied method of Mods.
4)  Replaced old ModPrefs debug log message left in from my VRChat mod.
5)  Fixed issue with Audica crashing when trying to use MelonLoader.
6)  Added Unity 2018.4.6f1 Dependencies.
7)  Fixed bug with Launch Options.
8)  Fixed Pathing issue that caused games like Boneworks to crash.
9)  Fixed Compile Version conflict with the 2 Consoles.
MelonLoader [DEBUG] & MelonLoader.ModHandler [RELEASE]  =  Debug Console
MelonLoader [RELEASE] & MelonLoader.ModHandler [DEBUG]  =  Normal Console
MelonLoader [DEBUG] & MelonLoader.ModHandler [DEBUG]  =  Debug Console
MelonLoader [RELEASE] & MelonLoader.ModHandler [RELEASE]  =  Left up to the Launch Options

---

Known Issues:

1)  Logs from the Normal Console are sometimes bugged and don't output to the Debug Console.
2)  Game.DontDestroyOnLoad causes crash.
3)  Certain methods that use System.Type cause crash. (example: GameObject.AddComponent)

---

Work-in-Progress / To-Do List:

1)  Fixing the above crashing issues.
2)  0Harmony integration and support.
3)  An assembly generator for game specific Assembly DLL files.
4)  A Dependency Download system to automate installation of MelonLoader.
5)  A component based system for Mod loading and running.
6)  Support for games that use Mono instead of IL2CPP.
7)  Support for Oculus Quest, Linux, and Mac.