@@ -11,5 +11,8 @@ namespace MelonLoader
         public extern static bool melonloader_is_il2cpp_game();
         [DllImport("MelonLoader\\MelonLoader", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
         public extern static bool melonloader_is_debug_mode();
+        [DllImport("MelonLoader\\MelonLoader", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
+        [return: MarshalAs(UnmanagedType.LPStr)]
+        public extern static string melonloader_get_game_directory();
     }
 }
